--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "watch": "npx tsc -p ./tsconfig.json --outDir . --rootDir src/@gen3/arranger --watch",
     "test": "npm run-script compile && npx jasmine --config=jasmine.json",
     "start": "npm run-script compile && node bin/server.js",
-    "eslint": "eslint --ext ts src",
-    "elint": "eslint --ext ts "
+    "eslint": "npx eslint --ext ts src",
+    "elint": "npx eslint --ext ts "
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@arranger/server": "^0.4.8",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "socket.io": "^2.1.1"
   }
 }
