--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "noImplicitAny": true,
+        //"noImplicitAny": true,
         "module": "commonjs",
         "target": "es6",
         "sourceMap": true,
