--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^4.16.0",
     "@types/jasmine": "^2.8.8",
     "@types/node": "^10.5.2",
+    "elasticdump": "^3.3.18",
     "eslint": "^5.1.0",
     "eslint-config-airbnb": "^17.0.0",
     "jasmine": "^3.1.0",
