--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint-config-airbnb": "^17.0.0",
     "jasmine": "^3.1.0",
     "jasmine-core": "^3.1.0",
+    "lodash": "^4.17.4",
+    "node-fetch": "^1.7.3",
     "typescript": "^2.9.2",
     "typescript-eslint-parser": "^16.0.1"
   },
