--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "elasticdump": "^3.3.18",
     "eslint": "^5.1.0",
     "eslint-config-airbnb": "^17.0.0",
+    "graphql-parse-resolve-info": "^4.0.0-beta.7",
     "jasmine": "^3.1.0",
     "jasmine-core": "^3.1.0",
     "lodash": "^4.17.4",
