fix(adminserver): launch in prod-mode
avoid 'watch *' - eats linux watch descriptors

--- a/Docker/arranger-server/Dockerfile
+++ b/Docker/arranger-server/Dockerfile
@@ -21,5 +21,5 @@ RUN git clone https://github.com/overture-stack/arranger.git \
 
 EXPOSE 5050
 
-WORKDIR /arranger
-CMD npm run server
+WORKDIR /arranger/modules/server
+CMD npm run run-prod
